# kafka-f1-telemetry-data-sample-project

./: README.md
infrastructure/models/: main.py  pyproject.toml
scripts/: .env  consumer.py  create-topic.sh  producer.py  pyproject.toml  stream_producer.py
