[tool.poetry]
name = "models"
version = "0.1.0"
description = "model dir for kafka-f1-telem project"
authors = ["Collin Hicks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.32"
py-postgresql = "^1.3.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
